add: supabase 연결 및 개인정보 관련 문제 해결
